--- a/index.html
+++ b/index.html
@@ -21,15 +21,12 @@
             <tr>
                 <td colspan=""></td>
                 <td><p id="dis">Not your computer? Use a Private Window to sign in. Learn more <br> about using Guest mode</p></td>
-            </tr>            
-          </table> 
-          <table>
+            </tr>
             <tr>
-                <td><span id="create"><button type="button">Create Account</button></span></td>
-                <td><span id="next"><button type="button">Next</button></span></td> 
-        </tr>
-        </table>
-       
+                <td><span id="create"><button class="createaccount">Create Account</button></span></td>
+                <td><span id="next"><button class="next1">Next</button></span></td> 
+        </tr>            
+          </table>       
     </div>
     
 </body>
